hphp/hack/test/typecheck/control_flow/do_break_undefined.php.exp
File "do_break_undefined.php", line 11, characters 10-11:
Variable $s is undefined, or there exists at least one control flow path reaching this point which does not define $s. (Naming[2050])
